[project]
name = "ploutos"
version = "0.1.0"
description = "Personal finance manager agents"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "asyncpg~=0.31.0",
    "bcrypt~=5.0",
    "fastapi[standard-no-fastapi-cloud-cli]~=0.139.0",
    "greenlet~=3.0",
    "httpx~=0.28.1",
    "loguru~=0.7",
    "pydantic-settings~=2.14.2",
    "pyjwt~=2.13",
    "sqlmodel~=0.0.39",
]

[dependency-groups]
dev = [
    "aiosqlite~=0.22",
    "alembic~=1.18",
    "pytest~=9.1",
    "pytest-asyncio~=1.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
